# The-Open-XF

./: LICENSE  Makefile  README.md  pyproject.toml
data/: tree.json
vc_parser/: __init__.py  cache.py  main.py  parsing.py  schemas.py  utils.py
